kubernetes/core/network-policies/templates/ccnp-allow-cilium-health.yaml
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-cilium-health
spec:
  endpointSelector:
    matchLabels:
      'reserved:health': ''
  ingress:
    - fromEntities:
      - remote-node
      icmps:
        - fields:
          - type: 8
            family: IPv4
          - type: 128
            family: IPv6
